<resources>
    <string name="app_name">Test_helper</string>
    <string name="pass_test">pass test</string>
    <string name="create_test">create test</string>
    <string name="results">Results</string>
    <string name="next"> Next </string>
    <string name="newImage"> Upload new image </string>
    <string name="oldImage"> Show current image </string>
    <string name="stop">To begin</string>
    <string name="dialog_title">Some fields are filled in incorrectly</string>
    <string name="dialog_message_balls">The number of points must be a number</string>
    <string name="dialog_message">The number of the correct answer is an integer from 1 to 4</string>
    <string name="inputTestName"> enter the name of the test </string>
    <string name="questionName"> enter the question text </string>
    <string name="varA"> enter the first answer option </string>
    <string name="varB"> enter the second answer option </string>
    <string name="varC"> enter the third answer option </string>
    <string name="varD"> enter the fourth answer option </string>
    <string name="trueAns"> enter the number of the correct answer</string>
    <string name="balls"> enter the number of points per question</string>
    <string name="congrat">Congratulations! You passed the test </string>
    <string name="ball">balls </string>
    <string name="of"> of </string>
    <string name="correct"> correct answers </string>
    <string name="imageToQues"> image to the question </string>
    <string name="click"> Click outside the window to continue!</string>
    <string name="trueAnswer">correct answers</string>
    <string name="questionNumber">question #</string>
    <string name="iAdd">image upload!</string>
    <string name="downloadError"> Failed to upload photo!</string>
    <string name="notFound"> Test not found </string>
    <string name="iNotFound"> Image not found </string>
    <string name="chooseTest"> choose test </string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>